<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="calculator"
            type="com.lf.calculator.presenter.CalculatorPresenter"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="15"
            android:id="@+id/result"
            android:layout_above="@+id/contentButtons"
            android:text="@{calculator.result}"
            android:gravity="end|top"
            android:textSize="@dimen/textSizeResult"
            android:padding="@dimen/defaultPadding"
            android:background="@color/displayColor"
            android:textColor="@android:color/white"
            tools:text="0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/contentButtons"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatButton
                    android:layout_weight="3"
                    android:text="@string/restart"
                    android:onClick="@{() -> calculator.restart()}"
                    android:id="@+id/buttonRestart"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/divide"
                    android:onClick="@{() -> calculator.divide()}"
                    android:id="@+id/buttonDivide"
                    style="@style/operationCalculator"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberSeven"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonSeven"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberEight"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonEight"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberNine"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonNine"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/multiply"
                    android:onClick="@{() -> calculator.multiply()}"
                    android:id="@+id/buttonMultiply"
                    style="@style/operationCalculator"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberFour"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonFour"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberFive"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonFive"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberSix"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonSix"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/subtract"
                    android:onClick="@{() -> calculator.subtract()}"
                    android:id="@+id/buttonSubtract"
                    style="@style/operationCalculator"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberOne"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonOne"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberTwo"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonTwo"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/numberThree"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonThree"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/add"
                    android:onClick="@{() -> calculator.add()}"
                    android:id="@+id/buttonAdd"
                    style="@style/operationCalculator"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatButton
                    android:layout_weight="2"
                    android:text="@string/numberZero"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonZero"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/point"
                    android:onClick="@{(view) -> calculator.addNumber(view)}"
                    android:id="@+id/buttonComma"
                    style="@style/numberCalculator"/>
                <android.support.v7.widget.AppCompatButton
                    android:text="@string/equal"
                    android:onClick="@{() -> calculator.equal()}"
                    android:id="@+id/buttonEqual"
                    style="@style/operationCalculator"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>
